[package]
name = "bevy_third_person_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.8", default-features = false }
bevy_rapier3d = "0.16"
bevy_polyline = "0.3"

[dev-dependencies]
bevy = { version = "0.8", features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_winit",
  "x11",
], default-features = false }
bevy-inspector-egui = "0.12"
